--- a/TZONE/StoryBo/Base.lproj/Main.storyboard
+++ b/TZONE/StoryBo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14295.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="h6l-YU-wO2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14295.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fim-ks-qWi">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -6244,7 +6244,7 @@
                                                             <constraint firstAttribute="height" constant="250" id="acb-wZ-YeN"/>
                                                         </constraints>
                                                         <connections>
-                                                            <segue destination="hrJ-sj-eld" kind="embed" id="LZN-lN-2Kp"/>
+                                                            <segue destination="hrJ-sj-eld" kind="embed" identifier="WebViewPay" id="LZN-lN-2Kp"/>
                                                         </connections>
                                                     </containerView>
                                                 </subviews>
@@ -6254,7 +6254,6 @@
                                                     <constraint firstItem="VJZ-fd-B2R" firstAttribute="centerY" secondItem="Fgn-lJ-Jno" secondAttribute="centerY" id="3QP-3I-GEy"/>
                                                     <constraint firstItem="Fgn-lJ-Jno" firstAttribute="leading" secondItem="q0x-IT-qWE" secondAttribute="leading" id="4SU-dJ-rBA"/>
                                                     <constraint firstAttribute="trailing" secondItem="uHu-CC-SXN" secondAttribute="trailing" id="4mo-Gs-ryP"/>
-                                                    <constraint firstAttribute="width" constant="323" id="5co-uT-B7j"/>
                                                     <constraint firstItem="q0x-IT-qWE" firstAttribute="top" secondItem="dkv-lK-0up" secondAttribute="bottom" id="6gI-Mz-u9e"/>
                                                     <constraint firstItem="q0x-IT-qWE" firstAttribute="trailing" secondItem="dkv-lK-0up" secondAttribute="trailing" id="70z-W1-SAq"/>
                                                     <constraint firstItem="dkv-lK-0up" firstAttribute="leading" secondItem="4kf-ma-ZjG" secondAttribute="leading" id="8aw-Ii-IF6"/>
@@ -6299,9 +6298,10 @@
                                             <constraint firstItem="Zay-0q-l1I" firstAttribute="top" secondItem="mf5-6x-zr0" secondAttribute="bottom" constant="30" id="2WS-2n-agS"/>
                                             <constraint firstItem="Zay-0q-l1I" firstAttribute="leading" secondItem="0If-VS-WRl" secondAttribute="leading" id="JDT-B1-flJ"/>
                                             <constraint firstItem="QGO-xO-5aD" firstAttribute="top" secondItem="dhf-ks-iq0" secondAttribute="bottom" constant="20" id="Jzy-PR-TDA"/>
+                                            <constraint firstItem="mf5-6x-zr0" firstAttribute="leading" secondItem="t0E-IL-7qL" secondAttribute="leading" id="PRj-0R-XNF"/>
                                             <constraint firstItem="dhf-ks-iq0" firstAttribute="centerX" secondItem="t0E-IL-7qL" secondAttribute="centerX" id="RdS-0n-w4t"/>
-                                            <constraint firstItem="mf5-6x-zr0" firstAttribute="leading" secondItem="QGO-xO-5aD" secondAttribute="leading" id="Rvc-Ig-Ylr"/>
                                             <constraint firstItem="dhf-ks-iq0" firstAttribute="top" secondItem="t0E-IL-7qL" secondAttribute="top" id="Tq7-Bu-fdG"/>
+                                            <constraint firstAttribute="trailing" secondItem="mf5-6x-zr0" secondAttribute="trailing" id="Vwe-qO-Weo"/>
                                             <constraint firstItem="QGO-xO-5aD" firstAttribute="leading" secondItem="t0E-IL-7qL" secondAttribute="leading" constant="16" id="oGf-2P-kFh"/>
                                             <constraint firstItem="mf5-6x-zr0" firstAttribute="top" secondItem="QGO-xO-5aD" secondAttribute="bottom" constant="30" id="tYm-tP-Z0F"/>
                                             <constraint firstItem="dhf-ks-iq0" firstAttribute="width" secondItem="t0E-IL-7qL" secondAttribute="width" id="xaU-mE-K6J"/>
@@ -6345,7 +6345,7 @@
         <!--Web View Pay-->
         <scene sceneID="joa-OR-N1V">
             <objects>
-                <viewController id="hrJ-sj-eld" customClass="WebViewPay" customModule="TZONE" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WebViewPay" id="hrJ-sj-eld" customClass="WebViewPay" customModule="TZONE" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="k0L-d9-jFE">
                         <rect key="frame" x="0.0" y="0.0" width="323" height="250"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -6355,7 +6355,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1ag-kh-maA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2727" y="4294"/>
+            <point key="canvasLocation" x="2874" y="4228"/>
         </scene>
     </scenes>
     <resources>
