--- a/TZONE/StoryBo/Base.lproj/Main.storyboard
+++ b/TZONE/StoryBo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14295.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Upk-wW-zMx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14295.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fim-ks-qWi">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -5692,7 +5692,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FOF-ca-tAi" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-655" y="-1498"/>
+            <point key="canvasLocation" x="-655.20000000000005" y="-1498.2008995502249"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6zI-9P-a30">
